<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageViewPokemonFalha"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/imagem_de_snorlax_e_pikachu_dormindo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        app:srcCompat="@mipmap/falha_no_carregamento" />

    <TextView
        android:id="@+id/textViewMensagemDeFalha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mensagem_de_falha_na_request"
        android:textSize="25sp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPokemonFalha"
        app:layout_constraintVertical_bias="0.3" />

    <Button
        android:id="@+id/botaoTentarNovamente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sim_tentar_novamente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMensagemDeFalha" />
</androidx.constraintlayout.widget.ConstraintLayout>