<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ctg_bg">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:fitsSystemWindows="true"
        android:theme="@style/Theme.Pokedex">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_detalhes_pokemon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ctg_bg"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            tools:title="@string/app_name">

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimerConteinerDetalhe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|end"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax">

                <ImageView
                    android:id="@+id/ivPokemonDetalhe"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    tools:srcCompat="@tools:sample/avatars"
                    android:contentDescription="@string/imagem_do_pokemon" />
            </com.facebook.shimmer.ShimmerFrameLayout>


            <Toolbar
                android:id="@+id/toolbar_detalhes"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@drawable/ctg_bg"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/layout_bg"
        android:padding="20dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <include android:id="@+id/detalhes_pokemon_container"
            layout="@layout/detalhes_pokemon"/>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fb_favoritar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:baselineAlignBottom="false"
        android:clickable="true"
        android:focusable="true"
        app:srcCompat="@drawable/star_outline"
        app:fabSize="normal"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="end|bottom"
        android:contentDescription="@string/favoritar" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>